--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
 		<div class="box"></div>
 		<div class="rectangle">Lorem ipsum</div>
-		<div class="box2"></div>
+		<div class="box2">foo</div>
 
 		<nav>
 			<ul>
