--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 		<p>Lorem ipsum</p>
 
 		<div class="box"></div>
-		<div class="rectangle">Lorem ipsum</div>
+		<div class="rectangle">Lorem ipsum dolor sit amet</div>
 		<div class="box2">foo</div>
 
 		<nav>
